<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>uk.gov.homeoffice.digital.sas</groupId>
    <artifactId>parentpom</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <revision>0.1.7</revision>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.version>${revision}${snapshotSuffix}</project.version>
        <snapshotSuffix/>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <java.version>17</java.version>
        <!-- JaCoCo Properties -->
        <jacoco.version>0.8.7</jacoco.version>
        <checkstyle-maven-plugin.version>3.2.0</checkstyle-maven-plugin.version>
        <!-- Sonar Properties -->
        <sonar.language>java</sonar.language>
        <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
        <sonar.organization>ukhomeoffice</sonar.organization>
        <sonar.projectName>callisto-jparest</sonar.projectName>
    </properties>

    <distributionManagement>
        <repository>
            <id>callisto-jparest</id>
            <url>https://artifactory.digital.homeoffice.gov.uk/artifactory/callisto-jparest</url>
        </repository>
        <snapshotRepository>
            <id>callisto-jparest</id>
            <url>https://artifactory.digital.homeoffice.gov.uk/artifactory/callisto-jparest</url>
        </snapshotRepository>
    </distributionManagement>


    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <modules>
        <module>jparest</module>
        <module>demo</module>
        <module>cucumber-jparest</module>
        <module>kafka-commons</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>3.2.0</version>
                    <goals>
                        <goal>check</goal>
                    </goals>
                    <executions>
                        <execution>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                <configuration>
                    <consoleOutput>true</consoleOutput>
                    <failsOnError>true</failsOnError>
                    <violationSeverity>warning</violationSeverity>
                    <configLocation>google_checks.xml</configLocation>
                    <suppressionsLocation>checkstyle_suppressions.xml</suppressionsLocation>
                </configuration>
            </plugin>
            <plugin>
                <!-- https://maven.apache.org/maven-ci-friendly.html#install-deploy -->
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.1.0</version>
                <configuration>
                    <updatePomFile>true</updatePomFile>
                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.8</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
      </build>
</project>
